Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     display: flex;
     justify-content: center;
     flex: 1 0 auto;
-    gap: 50px;
+    gap: 100px;
 }
 
 /*Color Picker*/
@@ -53,6 +53,7 @@ input[type='color']{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 100px;
 }
 
 button{
